application.properties were added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+spring.application.name=credit-application-system
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/credit_application_db
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1234567
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.sql.init.mode=never
+
+
+spring.jpa.properties.javax.persistence.validation.mode = none
+
+logging.level.root=info
+
+#### Security
+security.jwt.token.secret-key=secret-key
+# 5 minutes duration by default: 5 minutes * 60 seconds * 1000 milliseconds
+security.jwt.token.expire-length=30000000
 
