searching for error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=credit-application-system
 server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/credit_application_db
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=1234567
@@ -17,7 +17,7 @@ spring.jpa.properties.javax.persistence.validation.mode = none
 logging.level.root=info
 
 #### Security
-security.jwt.token.secret-key=secret-key
+#security.jwt.token.secret-key=secret-key
 # 5 minutes duration by default: 5 minutes * 60 seconds * 1000 milliseconds
-security.jwt.token.expire-length=30000000
+#security.jwt.token.expire-length=30000000
 
